remove options that I don't really use